Добавил роут смены роли пользователю
